--- a/src/website/src/app/documentation/demos/modal/modal.demo.html
+++ b/src/website/src/app/documentation/demos/modal/modal.demo.html
@@ -184,177 +184,29 @@
             </div>
         </div>
 
+        <!--Documentation with doc container -->
         <div id="code-examples">
-            <h3 id="examples">Code &amp; Examples</h3>
+          <h3 id="examples">Code &amp; Examples</h3>
+          <clr-tabs>
+            <clr-tab>
+              <button clrTabLink>API</button>
+              <clr-tab-content>
+                <vcd-api-viewer [component]="documentationEntry?.component"> </vcd-api-viewer>
+              </clr-tab-content>
+            </clr-tab>
 
-            <p>A static example of a modal with header, body and footer:</p>
-
-            <div class="alert alert-warning bump-down">
-                <div class="alert-items">
-                    <div class="alert-item static">
-                        <div class="alert-icon-wrapper">
-                            <clr-icon class="alert-icon" shape="exclamation-triangle"></clr-icon>
-                        </div>
-                            <span class="alert-text">
-                                IE fix: When the modal dialog is open, extend the
-                                <code class="clr-code">.no-scrolling</code> class on the
-                                <code class="clr-code">body</code> tag so that the content behind the
-                                backdrop does not scroll.
-                                Remove the class when the modal dialog is closed.
-                            </span>
-                    </div>
-                </div>
-            </div>
-
-            <clr-modal-static-demo></clr-modal-static-demo>
-
-            <h3>Sizes</h3>
-
-            <p>
-                In addition to the default, medium size, Clarity modals come in two optional sizes:
-                large and small. To use an optional size, add <code class="clr-code">modal-sm</code>
-                or <code class="clr-code">modal-lg</code> class to your modal-dialog.
-            </p>
-
-            <clr-modal-sizes-demo></clr-modal-sizes-demo>
-
-            <h3 id="modal-backdrop">Modal Backdrop</h3>
-
-            <p>Here is an example of a backdrop to use behind your modal, when you display it over a page:</p>
-
-            <clr-modal-backdrop-demo></clr-modal-backdrop-demo>
-
-            <h3 id="animation">Animation</h3>
-
-            <p>Modals and backdrops support fading animations. Clarity recommends using <code
-                class="clr-code">fadeDown</code> on the <code class="clr-code">modal-dialog</code>
-                and <code class="clr-code">fade</code> on the <code class="clr-code">modal-backdrop</code>.
-                These animations hide the modal and backdrop by default. Adding or removing the <code
-                class="clr-code">in</code> class animates the modal or backdrop in or out,
-                respectively.</p>
-
-            <clr-modal-animation-demo></clr-modal-animation-demo>
-
-            <h2 id="angular-component">Angular Component</h2>
-
-            <h3 id="summary-of-options">Summary of Options</h3>
-
-            <table class="table">
-                <thead>
-                <tr>
-                    <th class="left">Input/Output</th>
-                    <th class="hidden-xs-down">Values</th>
-                    <th class="hidden-xs-down">Default</th>
-                    <th class="left">Effect</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="left">
-                        <b>[(clrModalOpen)]</b>
-                        <div class="hidden-sm-up">Type: Boolean</div>
-                        <div class="hidden-sm-up">Default: false</div>
-                    </td>
-                    <td class="hidden-xs-down">true, false</td>
-                    <td class="hidden-xs-down">false</td>
-                    <td class="left">
-                        Two-way binding on the state of the modal: opened or closed.
-                    </td>
-                </tr>
-                <tr>
-                    <td class="left">
-                        <b>[clrModalSize]</b>
-                        <div class="hidden-sm-up">Values:<br/>"sm", &lt;none&gt;, "lg", "xl"</div>
-                        <div class="hidden-sm-up">Default: &lt;none&gt;</div>
-                    </td>
-                    <td class="hidden-xs-down">"sm", &lt;none&gt;, "lg", "xl"</td>
-                    <td class="hidden-xs-down">&lt;none&gt;</td>
-                    <td class="left">Sets the size of the modal. &lt;none&gt; is for medium size.</td>
-                </tr>
-                <tr>
-                    <td class="left">
-                        <b>[clrModalClosable]</b>
-                        <div class="hidden-sm-up">Type: Boolean</div>
-                        <div class="hidden-sm-up">Default: true</div>
-                    </td>
-                    <td class="hidden-xs-down">true, false</td>
-                    <td class="hidden-xs-down">true</td>
-                    <td class="left">
-                        If false, the modal will not be closable by clicking on the mask or on the top-right "x".
-                    </td>
-                </tr>
-                <tr>
-                    <td class="left">
-                        <b>[clrModalStaticBackdrop]</b>
-                        <div class="hidden-sm-up">Type: Boolean</div>
-                        <div class="hidden-sm-up">Default: true</div>
-                    </td>
-                    <td class="hidden-xs-down">true, false</td>
-                    <td class="hidden-xs-down">true</td>
-                    <td class="left">If true, the modal will not close when the user clicks outside of the modal.</td>
-                </tr>
-                </tbody>
-            </table>
-
-            <h4 id="examples">Examples</h4>
-
-            <clr-modal-angular-show-demo></clr-modal-angular-show-demo>
-
-            <h6 id="clrmodalsize">1. clrModalSize</h6>
-
-            <p>The Angular component offers the same optional sizes as the static styles through the
-                <code class="clr-code">clrModalSize</code> input. The default, empty size is medium.</p>
-
-            <clr-modal-angular-size-demo></clr-modal-angular-size-demo>
-
-            <h6 id="clrmodalclosable">2. clrModalClosable</h6>
-
-            <p>If you don’t want your modal to be closable by clicking on the top-right “x” or on the mask,
-                you can do so
-                with the <code class="clr-code">clrModalClosable</code> input. The default value is
-                <code class="clr-code">true</code>. You can still close the modal if one of <em>your</em>
-                components modifies the value bound to <code class="clr-code">clrModalOpen</code>.</p>
-
-            <clr-modal-angular-not-closable-demo></clr-modal-angular-not-closable-demo>
-
-            <h6 id="clrmodalstaticbackdrop">3. clrModalStaticBackdrop</h6>
-
-            <p>If you want the modal to be closable with a click on the backdrop, use the
-                <code class="clr-code">clrModalStaticBackdrop</code>.
-                If <code class="clr-code">false</code>, clicks on the background will close the modal.
-                The default value is <code class="clr-code">true</code>.</p>
-
-            <clr-modal-angular-static-backdrop-demo></clr-modal-angular-static-backdrop-demo>
-
-            <h3 id="api-reference">API Reference</h3>
-
-            <table class="table">
-                <thead>
-                <tr>
-                    <th class="left">Method</th>
-                    <th class="hidden-xs-down">Arguments</th>
-                    <th class="hidden-xs-down">Return Value</th>
-                    <th class="left">Description</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="left">open()</td>
-                    <td class="hidden-xs-down">N/A</td>
-                    <td class="hidden-xs-down">N/A</td>
-                    <td class="left">Manually opens the modal.</td>
-                </tr>
-                <tr>
-                    <td class="left">close()</td>
-                    <td class="hidden-xs-down">N/A</td>
-                    <td class="hidden-xs-down">N/A</td>
-                    <td class="left">
-                        Manually closes the modal if <code class="clr-code">clrModalClosable</code> is not set to <code
-                        class="clr-code">false</code>.
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <clr-tab>
+              <button clrTabLink>Examples</button>
+              <clr-tab-content>
+                <vcd-example-viewer
+                  *ngFor="let exampleDescriptor of documentationEntry?.examples"
+                  [exampleEntry]="exampleDescriptor"
+                >
+                </vcd-example-viewer>
+              </clr-tab-content>
+            </clr-tab>
+          </clr-tabs>
         </div>
+
     </article>
 </clr-doc-wrapper>
