--- a/src/website/src/app/app.component.html
+++ b/src/website/src/app/app.component.html
@@ -18,6 +18,7 @@
             <a class="nav-link" routerLink="/news" routerLinkActive="active"><span class="nav-text">What's New</span></a>
         </div>
         <div class="settings">
+            <div><ab-testing-timer></ab-testing-timer></div>
             <!-- watch/star widget from https://ghbtns.com/#original-watch-aka-star... apache 2 license. thanks, mdo! -->
             <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=vmware&repo=clarity&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
         </div>
